# UMAT_GTN

./: LICENSE  README.md  UMAT_GTN_W.for  figures_test_MatLaw.py  material_law_GTN.for  tensor_ope_module.for  test_1D_Strain_drive.for  test_elas_be1.for  test_elas_be2.for  test_isochoric_tension.for  test_isochoric_tension3D.for  test_isochoric_tensionPS.for  test_tensor_ope.for
1_Test_tensor_op/: .~lock.data_TT06.csv#  .~lock.data_TT07.csv#  CMakeLists.txt  a.out  build_with_cmake_and_run.x  data_TT01.csv  data_TT02.csv  data_TT03.csv  data_TT04.csv  data_TT05.csv  data_TT06.csv  data_TT07.csv  data_TT08.csv  generate_values_test.py  tensor_ope_module.for  test.for  test_tensor_mod.pf
1_Test_tensor_op/Miscellaneous/: read.f90  read.for  read_data.mod  square_mod.mod
2_Test_Abaqus_input_files/: fi_R_testR_ht_vol.py  test_uni_tens_pla_strain.inp  test_uni_tens_pla_strain_rot90.inp  test_uni_tens_pla_stress.inp
2_Test_Abaqus_input_files/Inp_GTN/: test_ht_vol.inp
2_Test_Abaqus_input_files/Inp_Rousselier/: testR_ht_vol.inp  testR_te_vol.inp  testR_te_vol2.inp
2_Test_Abaqus_input_files/Reference_data/: data_test_ht_vol.csv  data_test_ut_ps.csv  test_uniax_tens_ht.for  test_uniax_tens_ps.for
2_Test_Abaqus_input_files/Results_abaqus/: testR_te_vol.feh  testR_te_vol2.feh
3_UMAT/: UMAT_GTN_W.f  UMAT_GTN_W.for  UMAT_Rousse.f  material_law_GTN.for  tensor_ope_module.for
4_Test_lin_elas0/: Ana_test_lin_elas0.py  Ana_test_lin_elas1.py  dat_LE_01.csv  dat_LE_02.csv
5_Isochoric_test/: fi_test_MatLaw3D.py  fi_test_MatLawPS.py
6_1D_Stra_dri/: fi_test_strain_drive.py
